# ThesisCode

./: (4 + 1) GA_Jump(2)_12.txt  (4 + 1) GA_Jump(3)_12.txt  .gitignore  CMakeLists.txt  Hybrid GA_Jump(2)_12.txt  Hybrid GA_Jump(3)_12.txt  Hybrid GA_Jump(4)_12.txt  Jump(2).txt  Jump(3).txt  Jump(4).txt  README.md  SD-(1+1)_Jump(2)_12.txt  SD-(1+1)_Jump(3)_12.txt  SD-RLS_Jump(2)_12.txt  SD-RLS_Jump(3)_12.txt  SD-RLS_Jump(4)_12.txt  SD-RLS_STAR_Jump(2)_12.txt  SD-RLS_STAR_Jump(3)_12.txt  SD-RLS_m_Jump(2)_12.txt  SD-RLS_m_Jump(3)_12.txt  SD-RLS_r_Jump(2)_12.txt  SD-RLS_r_Jump(3)_12.txt  ThesisCode.sln  ThesisCode.vcxproj  ThesisCode.vcxproj.filters  cGA(4)_Jump(2)_12.txt  cGA(4)_Jump(3)_12.txt  output.txt  submit.sh
Debug/: ThesisCode.exe.recipe  ThesisCode.ilk  ThesisCode.vcxproj.FileListAbsolute.txt  vc142.idb
Debug/ThesisCode.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  ThesisCode.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
dependencies/GLEW/lib/Release/Win32/mingw/: glew32.lib
dependencies/GLText/include/: gltext.h
include/: Benchmark.h  Cliff.h  CoordinateSystem.h  CostFunction.h  EvolutionaryAlgorithm.h  GeneticAlgorithm.h  HybridGA.h  Jump.h  LeadingOnes.h  MST.h  MSTGenerator.h  MSTVisualization.h  MST_Visualization.h  Menu.h  MuPlusOneEA.h  MuPlusOneGA.h  OneCommaLambdaEA.h  OneMax.h  OnePlusLambdaCommaLambdaGA.h  OnePlusOneEA.h  OpenGL.h  Result.h  SASD_OnePlusLambda.h  SD.h  SDOnePlusOne.h  SD_OnePlusOne.h  SD_RLS.h  SD_RLS_STAR.h  SD_RLS_m.h  SD_RLS_r.h  Shape.h  TwoPlusOneGA.h  Utilityh.h  cGA.h
src/: Benchmark.cpp  Cliff.cpp  CoordinateSystem.cpp  CostFunction.cpp  EvolutionaryAlgorithm.cpp  GeneticAlgorithm.cpp  HybridGA.cpp  Jump.cpp  LeadingOnes.cpp  MST.cpp  MSTGenerator.cpp  MSTVisualization.cpp  MST_Visualization.cpp  Menu.cpp  MuPlusOneEA.cpp  MuPlusOneGA.cpp  OneCommaLambdaEA.cpp  OneMax.cpp  OnePlusLambdaCommaLambdaGA.cpp  OnePlusOneEA.cpp  OpenGL.cpp  Result.cpp  SASD_OnePlusLambda.cpp  SD.cpp  SDOnePlusOne.cpp  SD_OnePlusOne.cpp  SD_RLS.cpp  SD_RLS_STAR.cpp  SD_RLS_m.cpp  SD_RLS_r.cpp  Shape.cpp  TwoPlusOneGA.cpp  Utility.cpp  cGA.cpp  main.cpp
tools/: .gitignore  MSTGenerator.cpp  Utest.cpp  openglCode.cpp
